fix video styles on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,6 +73,18 @@ body{
     }
 }
 
+.video-container{
+    padding: 60px;
+}
+
+@media (max-width: 600px) {
+    .video-container{
+        padding: 60px 0;
+    }
+    .video-container > iframe{
+        width: fit-content;
+    }
+}
 
 .results-preview-container{
     display: flex;
